<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/post_bg"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/LinearLayout1">

            <TextView
                android:id="@+id/postBlood"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/bloog_group"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/postquantity"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/quantity"
                android:textColor="#fff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/LinearLayout1"
            >

            <TextView
                android:id="@+id/postLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/location"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/postContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/contact"
                android:textColor="#fff" />


        </LinearLayout>


</RelativeLayout>