<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_log_in"
    tools:context=".signUpPage">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />



    <LinearLayout
        android:id="@+id/log_in_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp">

        <LinearLayout
            android:id="@+id/username_layout"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_logo"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:layout_marginTop="9dp"
                android:contentDescription="@string/user_icon"
                android:src="@drawable/user_icon" />

            <EditText
                android:id="@+id/email_id"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:backgroundTint="#ffffff"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:hint="@string/email_id"
                android:inputType="textWebEmailAddress" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/passLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/password_logo"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/lock_icon"
                android:src="@drawable/pass_icon" />

            <EditText
                android:id="@+id/signup_pass"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:backgroundTint="#ffffff"
                android:hint="@string/password"
                android:inputType="textWebPassword"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/newPassLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/newPassword_logo"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/lock_icon"
                android:src="@drawable/pass_icon" />

            <EditText
                android:id="@+id/signup_Cpass"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:backgroundTint="#ffffff"
                android:hint="@string/confirm_password"
                android:inputType="textWebPassword"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/TermsAndConditions"
                android:layout_width="wrap_content"
                android:buttonTint="#ffffff"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/T_and_C"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:backgroundTint="#ffffff"
                android:textAlignment="center" />


        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="90dp"
        android:layout_height="32dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/log_in_input"
        android:layout_marginTop="51dp"
        android:autoLink="none|web|email|phone|map|all"
        android:background="@drawable/signup_button"
        android:focusable="true"
        android:text="@string/sign_up"
        android:textAlignment="center"
        tools:clickable="true" />



</RelativeLayout>