<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_log_in"
    tools:context=".registerPage">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/signupback"
        android:padding="10dp"
        android:alpha="0"

        android:src="@drawable/signup_back" />

    <ImageView
        android:id="@+id/user_profile_pic"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/profile_pic"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/submitProfile"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"

        android:background="@drawable/roundedbutton"
        android:text="@string/submit"
        android:textColor="#000"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/user_profile_pic"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:backgroundTint="#ffffff"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:backgroundTint="#ffffff"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/newEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email_id"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:backgroundTint="#ffffff"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/mobileNo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_no"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:backgroundTint="#ffffff"
            android:inputType="phone"
            android:textAlignment="center" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/bloodGrpAndGender"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:backgroundTint="#ffffff"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:backgroundTint="#ffffff"
            android:background="#fff">
        </Spinner>

        <Spinner
            android:id="@+id/bloodGrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:backgroundTint="#ffffff"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textAlignment="center"
            android:background="#fff">
        </Spinner>

    </LinearLayout>

    <!--

    <LinearLayout
        android:id="@+id/passLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/bloodGrpAndGender"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/newPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_password"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:backgroundTint="#ffffff"
            android:inputType="textWebPassword"
            android:textAlignment="center"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/newPassConfirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_password"
            android:inputType="textWebPassword"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:backgroundTint="#ffffff"
            android:textSize="15sp" />

    </LinearLayout>

    -->

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/bloodGrpAndGender"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/CPR_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#ffffff"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/knowCPR"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:backgroundTint="#ffffff"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>