<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="8dp"
    android:clickable="true"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    android:padding="5dp"
    android:focusable="true"
    app:cardElevation="3dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="1"
        android:columnCount="2">

        <LinearLayout
            android:layout_width="335dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_marginRight="0dp"
            android:background="#bdd9d9d9"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:orientation="horizontal">

                <TextView
                    android:textSize="13sp"
                    android:text="@string/blood_group_c"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="13sp"
                    android:id="@+id/cv_blood_grp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:orientation="horizontal">

                <TextView
                    android:textSize="13sp"
                    android:text="@string/quantity_c"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/cv_qty"
                    android:textSize="13sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:textSize="13sp"
                    android:layout_height="wrap_content"
                    android:text="@string/location_c"/>

                <TextView
                    android:id="@+id/cv_address"
                    android:textSize="13sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:textSize="13sp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number_c"/>

                <TextView
                    android:id="@+id/cv_phNo"
                    android:textSize="13sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/deleteButton"
            android:layout_gravity="center"
            android:background="@drawable/delete_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"/>

    </GridLayout>

</android.support.v7.widget.CardView>

</RelativeLayout>
